--- a/action.yaml
+++ b/action.yaml
@@ -21,12 +21,5 @@ outputs:
     description: 'Build result artifacts'
 
 runs:
-  using: composite
-  steps:
-  - run: go run main.go
-    shell: bash
-    env:
-      INPUT_SRC_PKG_DIR: ${{ inputs.sourcePkgDir }}
-      INPUT_TARGET_PKG_REGISTRY_HOSTNAME: ${{ inputs.targetPkgRegistryHostname }}
-      INPUT_TARGET_PKG_NAMESPACE: ${{ inputs.targetPkgNamespace }}
-      INPUT_TARGET_PKG_NAME: ${{ inputs.targetPkgName }}
+  using: 'node20'
+  main: 'dist/index.js'
