--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Log in to registry
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
     - name: kformpackage-action
-      uses: kform-tools/kformpkg-action@v0.0.1
+      uses: kform-tools/kformpkg-action@main
       with:
         targetPkgRegistryHostname: ghcr.io
