--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@actions/tool-cache": "^2.0.1",
     "jest": "^29.7.0",
     "typescript": "^5.3.2"
   }
