--- a/.github/workflows/kform.yml
+++ b/.github/workflows/kform.yml
@@ -24,5 +24,5 @@ jobs:
     - name: kformpackage-action
       uses: kform-tools/kformpkg-action@main
       with:
-        kformVersion: latest
+        kformVersion: v0.0.1
         targetPkgRegistryHostname: ghcr.io
