--- a/.github/workflows/kform.yml
+++ b/.github/workflows/kform.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Log in to registry
-      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
     - name: kformpackage-action
       uses: kform-tools/kformpkg-action@main
       with:
