--- a/.github/workflows/kform.yml
+++ b/.github/workflows/kform.yml
@@ -9,10 +9,9 @@ on:
   #  branches: [ "main" ]
   #pull_request:
   #  branches: [ "main" ]
-  
-
 jobs:
   test:
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
     - name: checkout
