--- a/action.yaml
+++ b/action.yaml
@@ -7,6 +7,10 @@ inputs:
     description: 'kform version'
     default: 'latest'
     required: false
+  kind:
+    description: 'package kind (provider or module)'
+    default: 'provider'
+    required: true
   sourcePkgDir:
     description: 'Directory from which the package is sourced'
     default: config
