--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@actions/tool-cache": "^2.0.1",
+    "eslint": "^9.3.0",
     "jest": "^29.7.0",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.2"
   }
 }
